// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group #attachUser should attach user to a group with given id 1`] = `
Object {
  "created_at": "2018-07-16T16:01:15.736047Z",
  "id": 2,
  "revision": 6,
  "updated_at": "2018-07-31T15:16:31.259745Z",
  "user_key": "xyz",
  "username": "testUser",
}
`;

exports[`Group #attachUser should attach user to a group with given name 1`] = `
Object {
  "created_at": "2018-07-16T16:01:15.736047Z",
  "id": 2,
  "revision": 6,
  "updated_at": "2018-07-31T15:16:31.259745Z",
  "user_key": "xyz",
  "username": "testUser",
}
`;

exports[`Group #create should create a group 1`] = `
Object {
  "description": "",
  "id": 1,
  "label": "Admin",
  "name": "admin",
}
`;

exports[`Group #delete should delete a group by id 1`] = `undefined`;

exports[`Group #detachUser should detach user from a group with given id 1`] = `undefined`;

exports[`Group #detachUser should detach user from a group with given name 1`] = `undefined`;

exports[`Group #find should find single group by id  1`] = `
Object {
  "description": "Manage stuff",
  "id": 2,
  "label": "Manager",
  "name": "manager",
}
`;

exports[`Group #find should find single group by name 1`] = `
Object {
  "description": "Manage stuff",
  "id": 2,
  "label": "Manager",
  "name": "manager",
}
`;

exports[`Group #findMany should find many groups by id  1`] = `
Array [
  Object {
    "description": "",
    "id": 1,
    "label": "Admin",
    "name": "admin",
  },
  Object {
    "description": "Manage stuff",
    "id": 2,
    "label": "Manager",
    "name": "manager",
  },
]
`;

exports[`Group #findMany should find many groups by id  2`] = `
Array [
  Object {
    "description": "Manage stuff",
    "id": 2,
    "label": "Manager",
    "name": "manager",
  },
]
`;

exports[`Group #findMany should find many groups by name 1`] = `
Object {
  "description": "Manage stuff",
  "id": 2,
  "label": "Manager",
  "name": "manager",
}
`;

exports[`Group #getUserGroups should return list of user groups 1`] = `
Array [
  Object {
    "description": "",
    "id": 1,
    "label": "Admin",
    "name": "admin",
  },
  Object {
    "description": "Manage stuff",
    "id": 2,
    "label": "Manager",
    "name": "manager",
  },
]
`;

exports[`Group #isUserAttahcedTo should return false when user doesn't belong to a group 1`] = `false`;

exports[`Group #isUserAttahcedTo should return true when user belongs to a group 1`] = `true`;

exports[`Group #list should get list of groups 1`] = `
Array [
  Object {
    "description": "",
    "id": 1,
    "label": "Admin",
    "name": "admin",
  },
  Object {
    "description": "Manage stuff",
    "id": 2,
    "label": "Manager",
    "name": "manager",
  },
]
`;

exports[`Group #update should update a group by id 1`] = `
Object {
  "description": "",
  "id": 1,
  "label": "Admin",
  "name": "admin",
}
`;
